<resources>
    <string name="app_name">Exercicio Firebase Authentication</string>
    <string name="insert_name">Digite seu nome</string>
    <string name="insert_email">Digite seu email</string>
    <string name="insert_pass">Digite sua senha</string>
    <string name="finish">Finalizar cadastro</string>
    <string name="hogin">Login</string>
    <string name="password">Senha</string>
    <string name="email">Email</string>
    <string name="login_success">Login Realizado com Sucesso!</string>
    <string name="exit">Sair</string>
    <string name="create_account">Criar nova conta</string>
    <string name="user_name">Nome:</string>
    <string name="user_email">Email:</string>
    <string name="mensage">Mensagem digitada</string>
    <string name="add_message">Adicionar Mensagem</string>
    <string name="new_message">Digite a nova mensagem</string>
    <string name="insert_your_message">Insira aqui as suas mensagens pessoais</string>
    <string name="favorite_message">Suas mensagens favoritas</string>
    <string name="description">imagem de uma estrela, para clicar e favoritar a mensagem</string>
</resources>