<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.createmessage.view.CreateMessageActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_24"
        android:text="@string/insert_your_message"
        android:textSize="@dimen/font_size_16"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_message_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16"
        android:hint="@string/new_message"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/bvAdicionar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_8"
        android:text="@string/add_message"
        app:layout_constraintEnd_toEndOf="@+id/et_message_text"
        app:layout_constraintStart_toStartOf="@+id/et_message_text"
        app:layout_constraintTop_toBottomOf="@+id/et_message_text"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_messagelist"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/size_8"
        android:layout_marginBottom="@dimen/size_8"
        tools:listitem="@layout/message_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bvAdicionar"
        app:layout_constraintStart_toStartOf="@+id/bvAdicionar"
        app:layout_constraintTop_toBottomOf="@+id/bvAdicionar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="@dimen/size_56"
        android:layout_height="@dimen/size_56"
        android:layout_margin="@dimen/size_16"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:maxImageSize="40dp"
        app:srcCompat="@drawable/ic_favorite_star"
        app:tint="@color/yellow" />

</androidx.constraintlayout.widget.ConstraintLayout>